<resources>
    <string name="app_name">phonetage</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Phone Tags</string>
    <string name="nav_header_subtitle">Phone Tags</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mainview">Main view</string>
    <string name="menu_blank">Blank list</string>
    <string name="menu_help">Help using app</string>
    <string name="menu_share">Friend Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_report">Report error</string>
    <string name="menu_purchase">Purchase</string>

    <string name="menu_done">Done</string>

    <string name="menu_dropped">Dropped</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_hide">Delete &amp; Hide</string>
    <string name="menu_deleted">Deleted</string>
    <string name="process">In-process</string>

    <string name="btn_send">Send</string>
    <string name="txt_phonenumber">Phone number</string>

    <string name="follow">Follow-up</string>
    <string-array name="tablist">
        <item>Task</item>
        <item>QuickTag</item>
        <item>Filter</item>
    </string-array>

</resources>
