<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fr_blank">

    <fragment
        android:id="@+id/fr_blank"
        android:name="com.contactservice.phonetage.ui.Blanklist"
        android:label="@string/menu_blank"
        tools:layout="@layout/blanklist_fragment" />

    <fragment
        android:id="@+id/fr_help"
        android:name="com.contactservice.phonetage.ui.Helpusing"
        android:label="@string/menu_help"
        tools:layout="@layout/helpusing_fragment" />

    <fragment
        android:id="@+id/fr_share"
        android:name="com.contactservice.phonetage.ui.Share"
        android:label="@string/menu_share"
        tools:layout="@layout/share_fragment" />

    <fragment
        android:id="@+id/fr_settings"
        android:name="com.contactservice.phonetage.ui.Settings"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />

    <fragment
        android:id="@+id/fr_report"
        android:name="com.contactservice.phonetage.ui.Reporterror"
        android:label="@string/menu_report"
        tools:layout="@layout/reporterror_fragment" />

    <fragment
        android:id="@+id/fr_purchase"
        android:name="com.contactservice.phonetage.ui.Purchase"
        android:label="@string/menu_purchase"
        tools:layout="@layout/purchase_fragment" />
</navigation>